# taskline

./: .cz.toml  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  Makefile  README.md  additional-resources.html  book.toml  changelog.html  code-of-conduct.html  contributing.html  diagram.d2  docker-compose.yml  index.html  introduction.html  print.html  quick-start.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bumpversion.yml  ci.yml
_github/: PULL_REQUEST_TEMPLATE.md
docs/: SUMMARY.md  additional-resources.md  introduction.md  quick-start.md
docs/user-guide/: README.md  autodelete.md  format.md  pipeline.md
examples/: autodelete.rs  json.rs  memory.rs  redis.rs  redis_json.rs  redis_json_autodelete.rs  redis_json_pipeline.rs  simple.rs
src/: backend.rs  client.rs  committer.rs  consumer.rs  lib.rs  prelude.rs  producer.rs  taskline.rs  tasks.rs  utils.rs
src/backends/: memory.rs  mod.rs  redis.rs  redis_json.rs
src/coders/: json.rs
tests/: main.rs
user-guide/: autodelete.html  format.html  index.html
