[workspace]
members = ["./"]

[package]
name = "taskline"
version = "0.9.1"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
description = "A simple distributed task queue for Rust"
repository = "https://github.com/daxartio/taskline"
keywords = ["redis", "queue", "task", "async", "distributed"]
categories = ["asynchronous", "web-programming"]
license = "MIT"
edition = "2021"
rust-version = "1.63"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
redis = ["dep:redis"]
json = ["dep:serde", "dep:serde_json"]
tokio = ["dep:tokio"]

[dependencies]
async-trait = "0.1.80"
redis = { version = "0.25.3", features=["connection-manager", "tokio-comp"], optional = true }
serde = { version = "1.0.199", features = ["serde_derive"], optional = true }
serde_json = { version = "1.0.116", optional = true }
tokio = { version = "1.37", features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "1.37", features = ["time", "macros", "rt-multi-thread"]}
redis = { version = "0.25.3", features=["connection-manager", "tokio-comp"] }
serde = { version = "1.0.199", features = ["serde_derive"] }
serde_json = { version = "1.0.116" }

[[example]]
name = "memory"
required-features = ["tokio"]

[[example]]
name = "redis"
required-features = ["redis"]

[[example]]
name = "redis_json"
required-features = ["redis", "json"]

[[example]]
name = "redis_json_autodelete"
required-features = ["redis", "json"]
