[workspace]
members = ["./"]

[package]
name = "taskline"
version = "0.9.5"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
description = "A simple distributed task queue for Rust"
repository = "https://github.com/daxartio/taskline"
keywords = ["redis", "queue", "task", "async", "distributed"]
categories = ["asynchronous", "web-programming"]
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
redis = ["dep:redis"]
json = ["dep:serde", "dep:serde_json"]
tokio = ["dep:tokio"]

[dependencies]
redis = { version = "0.28", features=["connection-manager", "tokio-comp"], optional = true }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.43", features = ["time"], optional = true }

[dev-dependencies]
redis = { version = "0.28", features=["connection-manager", "tokio-comp"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.43", features = ["time", "macros", "rt-multi-thread"]}

[[example]]
name = "redis"
required-features = ["redis", "tokio"]
