[workspace]
members = ["./"]

[package]
name = "taskline"
version = "0.10.0"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
description = "A simple distributed task queue for Rust"
repository = "https://github.com/daxartio/taskline"
keywords = ["redis", "queue", "task", "async", "distributed"]
categories = ["asynchronous", "web-programming"]
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
redis = { version = "0.28", features=["connection-manager", "tokio-comp"]}

[dev-dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.43", features = ["time", "macros", "rt-multi-thread"]}
tokio-util = { version = "0.7.13", features = ["full"] }
